Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6484,7 +6484,8 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    location_trip = []"
+    "    location_trip = []\n",
+    "    location_trip.append()"
    ]
   },
   {
