Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6485,7 +6485,7 @@
    "source": [
     "def location(trip):\n",
     "    location_trip = []\n",
-    "    for loclocation_trip.append()"
+    "    for location_trip.append()"
    ]
   },
   {
