Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6485,7 +6485,8 @@
    "source": [
     "def location(trip):\n",
     "    location_trip = []\n",
-    "    for lolocation_trip.append()"
+    "    for i in trip:\n",
+    "        location_trip.append()"
    ]
   },
   {
