--- a/index.ipynb
+++ b/index.ipynb
@@ -6486,7 +6486,7 @@
     "def location(trip):\n",
     "    location_trip = []\n",
     "    for i in trip:\n",
-    "        location_trip.append()"
+    "        location_trip.append(list(map(la)))"
    ]
   },
   {
