Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6486,7 +6486,7 @@
     "def location(trip):\n",
     "    location_trip = []\n",
     "    for i in trip:\n",
-    "        location_trip.append(i"
+    "        location_trip.append(i[key]"
    ]
   },
   {
