--- a/index.ipynb
+++ b/index.ipynb
@@ -6486,7 +6486,7 @@
     "def location(trip):\n",
     "    location_trip = []\n",
     "    for i in trip:\n",
-    "        location_trip.append(i[key] for key in trip.keys() & ['pickup_latitude', 'pickup_longitude']"
+    "        location_trip.append(i[key] for key in trip.keys() if key = ['pickup_latitude', 'pickup_longitude']"
    ]
   },
   {
