--- a/index.ipynb
+++ b/index.ipynb
@@ -6479,7 +6479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6487,14 +6487,27 @@
     "    location_trip = []\n",
     "    for i in trip:\n",
     "        location_trip.append(i[key] for key in ['pickup_latitude', 'pickup_longitude'])\n",
-    "    return "
+    "    return location_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<generator object location.<locals>.<genexpr> at 0x7f5c7666a990>,\n",
+       " <generator object location.<locals>.<genexpr> at 0x7f5c7666a780>,\n",
+       " <generator object location.<locals>.<genexpr> at 0x7f5c7666a728>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_location = location(first_trip) # [40.64499, -73.78115]\n",
     "first_location # [40.64499, -73.78115]"
