Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6493,7 +6493,7 @@
     "def location(trip):\n",
     "    location_trip = []\n",
     "    for i in trip:\n",
-    "        location_trip.append(i[key] for key ['pickup_latitude', 'pickup_longitude'])\n",
+    "        location_trip.append(i[key] for key in ['pickup_latitude', 'pickup_longitude'])\n",
     "    return location_trip"
    ]
   },
