Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6467,22 +6467,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['pickup_latitude', 'pickup_longitude', 'trip_distance'])"
+       "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'pickup_latitufirst_trip.keys()"
+    "['pickup_latitude' in first_trip.keys()"
    ]
   },
   {
