--- a/index.ipynb
+++ b/index.ipynb
@@ -6467,24 +6467,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pickup_latitude': 40.64499,\n",
-       " 'pickup_longitude': -73.78115,\n",
-       " 'trip_distance': 18.38}"
+       "float"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_trip[]"
+    "type(first_trip['pickup_latitude'])"
    ]
   },
   {
