Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6494,7 +6494,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    location_trip = list(map())"
+    "    location_trip = list(map(lambda i:))"
    ]
   },
   {
