Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6494,7 +6494,8 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    l\n",
+    "    location_trip = []\n",
+    "    for \n",
     "    return location_trip"
    ]
   },
