Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6496,7 +6496,7 @@
     "def location(trip):\n",
     "    location_trip = []\n",
     "    for i in trip:\n",
-    "        location_trip.append()\n",
+    "        location_trip.append({key: })\n",
     "    return location_trip"
    ]
   },
