Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6489,28 +6489,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
     "    location_trip = []\n",
-    "    location_trip.append({key: trip[key] for key in ['pickup_latitude','pickup_longitude']})\n",
+    "    location_trip.append(trip[key] for key in ['pickup_latitude','pickup_longitude'])\n",
     "    return location_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'pickup_latitude': 40.64499, 'pickup_longitude': -73.78115}]"
+       "[<generator object location.<locals>.<genexpr> at 0x7f5c75387eb8>]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
