--- a/index.ipynb
+++ b/index.ipynb
@@ -6489,28 +6489,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
     "    location_trip = []\n",
-    "    location_trip.append(trip[key] for key in ['pickup_latitude','pickup_longitude'])\n",
+    "    location_trip.append(list(trip[key] for key in ['pickup_latitude','pickup_longitude']))\n",
     "    return location_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<generator object location.<locals>.<genexpr> at 0x7f5c7539c258>]"
+       "[[40.64499, -73.78115]]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
