Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6489,18 +6489,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-75-80d93d83a25e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-75-80d93d83a25e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    location_trip = [trip[key] for key in ['pickup_latitude','pickup_longitude'])]\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def location(trip):\n",
-    "    location_trip = list(trip[key] for key in ['pickup_latitude','pickup_longitude']))\n",
+    "    location_trip = [trip[key] for key in ['pickup_latitude','pickup_longitude'])]\n",
     "    return location_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -6509,7 +6518,7 @@
        "[[40.64499, -73.78115]]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
