--- a/index.ipynb
+++ b/index.ipynb
@@ -6533,8 +6533,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    pasmarker = folium.CircleMarker(location = [40.7589, -73.9851])\n",
-    "s"
+    "    marker = folium.CircleMarker(location)"
    ]
   },
   {
