Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6533,7 +6533,8 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker.appendfolium.CircleMarker(location) "
+    "    marker = []\n",
+    "    marker.append(folium.CircleMarker(location))"
    ]
   },
   {
