Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6561,7 +6561,7 @@
    ],
    "source": [
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "times_square_marker.location"
+    "json"
    ]
   },
   {
