Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6563,7 +6563,8 @@
    ],
    "source": [
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
-    "s1 = json.dumps(times_square_marker)\n"
+    "s1 = json.dumps(times_square_marker)\n",
+    "json.loads(s)"
    ]
   },
   {
