--- a/index.ipynb
+++ b/index.ipynb
@@ -6590,7 +6590,9 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    for "
+    "    \n",
+    "    for trip in trips:\n",
+    "        "
    ]
   },
   {
