Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6592,7 +6592,7 @@
     "def markers_from_trips(trips):\n",
     "    list_of_markers = []\n",
     "    for trip in trips:\n",
-    "        listo"
+    "        list_of_markers.append()"
    ]
   },
   {
