Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9671,7 +9671,8 @@
     "\n",
     "> Hint: The following is how to write a map with folium:\n",
     "> ```python \n",
-    "x> ```"
+    "    folium.Map(location=location, zoom_start=zoom_amount)\n",
+    "> ```"
    ]
   },
   {
@@ -9681,7 +9682,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    pass"
+    "    folium.Map(location=location, zoom_start=zoom_amount)\n"
    ]
   },
   {
