Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9682,7 +9682,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    [folium.Map(location=location, zoom_start=zoom_amount) for location \n"
+    "    return folium.Map(location=location, zoom_start=zoom_amount)\n"
    ]
   },
   {
