--- a/index.ipynb
+++ b/index.ipynb
@@ -9759,7 +9759,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    pass"
+    "    map_obj.add(ma)"
    ]
   },
   {
