Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9759,7 +9759,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    rmarker.add_to(map_obj)"
+    "    marker.add_to(map_obj)"
    ]
   },
   {
