--- a/index.ipynb
+++ b/index.ipynb
@@ -9759,8 +9759,9 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    for marker in marker\n",
-    "    marker.add_to(map_obj)"
+    "    for marker in markers:\n",
+    "        marker.add_to(map_obj)\n",
+    "    return "
    ]
   },
   {
