--- a/index.ipynb
+++ b/index.ipynb
@@ -9828,7 +9828,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    distance = math.sqrt((x1))"
+    "    distance = math.sqrt((x2-x1)^2 + (y1-))"
    ]
   },
   {
