--- a/index.ipynb
+++ b/index.ipynb
@@ -9829,7 +9829,7 @@
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    distance = math.sqrt((x2-x1)^2 + (y2-y1)^2)\n",
-    "    "
+    "    return dis"
    ]
   },
   {
