--- a/index.ipynb
+++ b/index.ipynb
@@ -9828,7 +9828,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    distance = math.sqrt((selected_trip['longitude']-x1)^2 + (y2-y1)^2)\n",
+    "    distance = math.sqrt((selected_trip['longitude'] -selected_trip['longitude'])^2 + (y2-y1)^2)\n",
     "    return distance"
    ]
   },
