--- a/index.ipynb
+++ b/index.ipynb
@@ -9828,7 +9828,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    distance = math.sqrt((selected_trip['pickup_longitude'] - neighbor_trip['pickup_longitude'])^2 + (selected_trip['latitude'] - neighbor_trip['latitude'])^2)\n",
+    "    distance = math.sqrt((selected_trip['pickup_longitude'] - neighbor_trip['pickup_longitude'])^2 + (selected_trip['pickup_latitude'] - neighbor_trip['latitude'])^2)\n",
     "    return distance"
    ]
   },
