--- a/index.ipynb
+++ b/index.ipynb
@@ -9870,7 +9870,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance_sel"
+    "    distance_selected_trip = []"
    ]
   },
   {
