--- a/index.ipynb
+++ b/index.ipynb
@@ -9870,7 +9870,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance_selected_neighbor['distace_from']"
+    "    distance_selected_neighbor['distace_from_selected'] = distance"
    ]
   },
   {
