--- a/index.ipynb
+++ b/index.ipynb
@@ -9871,7 +9871,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    distance_selected_neighbor['distace_from_selected'] = distance_location(selected_trip, neighbor_trip)\n",
-    "    return distance_sele"
+    "    return distance_selected_neighbor"
    ]
   },
   {
