Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9865,12 +9865,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    distance_selected_neighbor = ì\n",
+    "    distance_selected_neighbor = neighbor_trip.copy()\n",
     "    distance_selected_neighbor['distace_from_selected'] = distance_location(selected_trip, neighbor_trip)\n",
     "    return distance_selected_neighbor"
    ]
