--- a/index.ipynb
+++ b/index.ipynb
@@ -9877,7 +9877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -9886,10 +9886,10 @@
        "{'pickup_latitude': 40.766931,\n",
        " 'pickup_longitude': -73.982098,\n",
        " 'trip_distance': 1.3,\n",
-       " 'distace_from_selected': 0.23505256047318146}"
+       " 'distance_from_selected': 0.23505256047318146}"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
