Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9933,7 +9933,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    distance_from"
+    "    distance_between_neighbors(selected,i)"
    ]
   },
   {
