Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9933,7 +9933,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    distance_between_neighbors(selected_individual, neighbors)"
+    "    distances = []distance_between_neighbors(selected_individual, neighbors)"
    ]
   },
   {
