Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9933,7 +9933,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    r[distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors]"
+    "    return [distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors]"
    ]
   },
   {
