Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9934,7 +9934,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    \n",
-    "    return [distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors_ex]"
+    "    return [distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors_exemption]"
    ]
   },
   {
