Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9933,7 +9933,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    neighbors_exemption = filter(neighbors != selected_individual,)\n",
+    "    neighbors_exemption = filter(neighbors != selected_individual, neighbors)\n",
     "    return [distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors_exemption]"
    ]
   },
