Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9928,12 +9928,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    neighbors_exemption = filter(lambda neighbor eighbors != selected_individual, neighbors)\n",
+    "    neighbors_exemption = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return [distance_between_neighbors(selected_individual, neighbor) for neighbor in neighbors_exemption]"
    ]
   },
