--- a/index.ipynb
+++ b/index.ipynb
@@ -9982,7 +9982,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    sorted(nearest, key = lambda neighbor:)"
+    "    sorted(nearest, key = lambda neighbor: neighbor['distance'])"
    ]
   },
   {
