Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -9982,8 +9982,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    \n",
-    "    sorted_nsorted(nearest, key = lambda neighbor: neighbor['distance'])"
+    "    nearest \n",
+    "    sorted_neighbors = sorted(nearest, key = lambda neighbor: neighbor['distance'])"
    ]
   },
   {
