--- a/index.ipynb
+++ b/index.ipynb
@@ -9982,7 +9982,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    \n",
+    "    distances = d\n",
     "    sorted_neighbors = sorted(nearest, key = lambda neighbor: neighbor['distance'])"
    ]
   },
