--- a/index.ipynb
+++ b/index.ipynb
@@ -9983,8 +9983,8 @@
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    distances = distance_all(selected_trip, trips)\n",
-    "    \n",
-    "    sorted_neighbors = sorted(distances, key = lambda neighbor: neighbor['distance'])"
+    "    sorted_neighbors = sorted(distances, key = lambda neighbor: neighbor['distance'])\n",
+    "    "
    ]
   },
   {
